dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-app-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: welcome-dev.34.247.16.177.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome-app
            port:
              number: 80
